Support: Prevent long topic titles from overflowing listing table cell.
Props bhaveshdesai13, coffee2code.
Fixes #6694.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13381 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style-rtl.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style-rtl.css
@@ -3946,6 +3946,9 @@ section {
 .bbpress li.bbp-header li.bbp-topic-title {
 	text-align: right !important;
 }
+.bbpress li.bbp-topic-title {
+	overflow-wrap: anywhere;
+}
 
 /*--------------------------------------------------------------
 # Buttons
