--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style.css
@@ -3948,6 +3948,9 @@ section {
 .bbpress li.bbp-header li.bbp-topic-title {
 	text-align: left !important;
 }
+.bbpress li.bbp-topic-title {
+	overflow-wrap: anywhere;
+}
 
 /*--------------------------------------------------------------
 # Buttons
